# mdorrst

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  mdorrst.py  pyproject.toml  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
mdorrst/: __init__.py  mdorrst.py
tests/: test_mdorrst.py
tests/readmes/3ptscience/steno3dpy/: README.rst
tests/readmes/7sDream/zhihu-oauth/: README.md
tests/readmes/AASHE/python-membersuite-api-client/: README.md
tests/readmes/ALFminecraft/Migro/: README.rst
tests/readmes/Akira-Taniguchi/zaifapi/: README.md
tests/readmes/AlanKuurstra/vidi3d/: README.md
tests/readmes/AlejandroFrias/case-conversion/: README.md
tests/readmes/Alignak-monitoring-contrib/alignak-checks-windows-nsca/: README.rst
tests/readmes/AlpineNow/python-alpine-api/: README.rst
tests/readmes/Antman261/csvputty/: README.md
tests/readmes/AntonioJBT/project_quickstart/: README.rst
tests/readmes/Apstra/aeon-venos/: README.md
tests/readmes/ArabellaTech/ydcommon/: README.rst
tests/readmes/Atterratio/cmsplugin-yandex-maps/: README.rst
tests/readmes/BDNYC/astrodbkit/: README.md
tests/readmes/Bassintag551/spark-python-sdk/: README.md
tests/readmes/BingLau7/Threshold/: README.md
tests/readmes/BornFreeLabs/musicmood/: README.md
tests/readmes/CI-WATER/mapkit/: README.md
tests/readmes/CivicKnowledge/pandas-reporter/: README.rst
(+475 files in other folders)
