[metadata]
name = mdorrst
version = attr: mdorrst.__version__
description = Implementation of a few integer sequences from the OEIS.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@python.org
url = https://github.com/JulienPalard/mdorrst
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
py_modules = mdorrst
python_requires = >= 3.6

[options.entry_points]
console_scripts = mdorrst=mdorrst:run
